--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: sans-serif;
     font-size: 16px;
     line-height: 1;
   }
@@ -43,17 +43,17 @@ body {
   }
   
   .past {
-    background-color: #d3d3d3;
+    background-color: #4b4848;
     color: white;
   }
   
   .present {
-    background-color: #ff6961;
+    background-color: #d7da2e;
     color: white;
   }
   
   .future {
-    background-color: #77dd77;
+    background-color: #52db52;
     color: white;
   }
   
@@ -68,5 +68,15 @@ body {
   .saveBtn i:hover {
     font-size: 20px;
     transition: all .3s ease-in-out;
+  }
+  .container{
+    margin-bottom: 10px;
+  }
+  .footer {
+  
+    height:50px;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(13, 175, 224);
   }
   
